--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "ng-stats": "~2.2.0",
     "ng-sortable": "~1.2.0",
     "angular-touch": "~1.3.15",
-    "youtube-iframe-api": "~0.0.1"
+    "youtube-iframe-api": "~0.0.1",
+    "Keypress": "~2.1.3"
   },
   "resolutions": {
     "angular": "~1.3.15",
